--- a/01.ipynb
+++ b/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "98700cfd",
    "metadata": {},
    "outputs": [],
@@ -19,20 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "15bf42f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Чтение файла с речью политика\n",
-    "file_path = 'Speech/2008_медведев.txt'\n",
+    "file_path = 'Speech/2023_путин.txt'\n",
     "with open(file_path, 'r', encoding='utf-8') as f:\n",
     "    text = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "641dcbe3",
    "metadata": {},
    "outputs": [],
@@ -47,20 +47,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "10cfcefd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Фильтрация стоп-слов из текста\n",
-    "stopwords = set([...])  # список стоп-слов\n",
+    "stopwords = set([\n",
+    "    \"в\", \"к\", \"у\", \"о\", \"от\", \"при\", \"из\", \"без\", \"через\", \"над\", \"на\", \"с\", \"до\", \"тоже\", \"также\", \n",
+    "    \"и\", \"да\", \"но\", \"зато\", \"только\", \"либо\", \"что\", \"когда\", \"как\", \"пока\", \"чтобы\", \"так как\", \n",
+    "    \"потому что\", \"хотя\", \"если\", \"раз\", \"словно\", \"точно\", \"несмотря на то что\", \"да\", \"так\", \"точно\", \n",
+    "    \"ну да\", \"не\", \"ни\", \"ли\", \"разве\", \"неужели\", \"а\", \"что ли\", \"как\", \"будто\", \"словно\", \"точно\", \n",
+    "    \"как будто\", \"вроде\", \"как бы\", \"даже\", \"и\", \"ни\", \"же\", \"ведь\", \"уж\", \"всё\", \"всё-таки\", \"просто\", \n",
+    "    \"прямо\", \"вот\", \"вон\", \"это\", \"именно\", \"как раз\", \"подлинно\", \"ровно\", \"лишь\", \"только\", \"хоть\", \n",
+    "    \"всего\", \"исключительно\", \"что за\", \"то-то\", \"как\", \"ну и\", \"ведь\", \"вряд ли\", \"едва ли\", \"по\", \"для\", \n",
+    "    \"их\", \"уже\", \"за\", \"то\", \"бы\", \"чем\", \"тем\", \"во\", \"об\", \"или\", \"со\", \"кто\"\n",
+    "]) # список стоп-слов\n",
     "words = text.split()\n",
     "filtered_text = ' '.join(word for word in words if word not in stopwords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "17f1fe67",
    "metadata": {},
    "outputs": [],
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "75b5e686",
    "metadata": {},
    "outputs": [],
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "33199f04",
    "metadata": {},
    "outputs": [
@@ -92,14 +101,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Файл сохранен как 'xlsx\\2008_медведев.xlsx'.\n"
+      "Файл сохранен как 'xlsx\\2023_путин.xlsx'.\n"
      ]
     }
    ],
    "source": [
     "# Подготовка к сохранению DataFrame в Excel файл\n",
     "output_directory = 'xlsx'\n",
-    "file_name = '2008_медведев.xlsx'\n",
+    "file_name = '2023_путин.xlsx'\n",
     "output_path = os.path.join(output_directory, file_name)\n",
     "if not os.path.exists(output_directory):\n",
     "    os.makedirs(output_directory)\n",
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "0b092898",
    "metadata": {},
    "outputs": [],
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "04983d48",
    "metadata": {},
    "outputs": [],
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "1cd7919e",
    "metadata": {},
    "outputs": [],
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "dea8784b",
    "metadata": {},
    "outputs": [
@@ -154,13 +163,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Файл сохранен как 'xlsx\\2008_медведев_корни.xlsx'.\n"
+      "Файл сохранен как 'xlsx\\2023_путин_корни.xlsx'.\n"
      ]
     }
    ],
    "source": [
     "# Подготовка к сохранению лемматизированного DataFrame в Excel\n",
-    "original_file_name = '2008_медведев'  # Название исходного файла\n",
+    "original_file_name = '2023_путин'  # Название исходного файла\n",
     "new_file_name = f\"{original_file_name}_корни.xlsx\"\n",
     "output_path = os.path.join(output_directory, new_file_name)\n",
     "if not os.path.exists(output_directory):\n",
@@ -168,6 +177,14 @@
     "df_lemmatized.to_excel(output_path, index=False)\n",
     "print(f\"Файл сохранен как '{output_path}'.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bde5b5c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
